Fix text-box alignment

--- a/src/components/comments.scss
+++ b/src/components/comments.scss
@@ -3,5 +3,10 @@
 .comments {
   &__component {
     margin-bottom: 1rem;
+
+    &--text-box-hack {
+        max-width: 45rem;
+      margin-left: -.8rem;
+    }
   }
 }
